src/main/java/com/example/sos/common/error/dto/BaseErrorResponse.java
package com.example.sos.common.error.dto;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@RequiredArgsConstructor
@Getter
public class BaseErrorResponse {
    private final String errorMessage;
}
